example/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jaylabs
  namespace: development
  labels:
    app: jaylabs
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: jaylabs
  template:
    metadata:
      labels:
         app: jaylabs
    spec:
      containers:
      - name: jaylabs
        image: jaylabs:a1b2c3
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 15
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 15
          timeoutSeconds: 5
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: 2
            memory: 2Gi
